Make sure to do a deep copy of a QImage when it's being painted on.

Not doing so can produce some hard-to-track-down bugs in the app.

Task-number: QTBUG-15749
Reviewed-by: Gunnar Sletta